results/SVCOMP/conversational/log-URLDecoder02-2024_03_18_00_47_36.txt
public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = Verifier.nondetString() + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:7: error: cannot find symbol
        String s1 = Verifier.nondetString() + "some-url";
                    ^
  symbol:   variable Verifier
  location: class URLDecoder02
1 error

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-random-string" + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
        return true;
        ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:16:
    //@ ensures \result ==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-random-string" + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-random-string" + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

public class URLDecoder02 {

    //@ requires arg != null;
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
    public static boolean f(String arg) {

        String s1 = "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4:) in method f
                return false;
                ^
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/URLDecoder02.java:12:
    //@ ensures \result <==> (\exists String s1; s1.startsWith("some") && s1.endsWith("some-url"));
        ^
2 verification failures

